--- a/Extra_HTML/aula713_Display-GRID/display.css
+++ b/Extra_HTML/aula713_Display-GRID/display.css
@@ -4,9 +4,19 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: sans-serif;
+}
+
 .grid {
- 
+    max-width: 1200px;
     padding: 15px;
+    margin: 0 auto;
+    padding-top: 73px;
 }
 
 .grid::after {
@@ -20,14 +30,94 @@
 
     width: 33.33%;
     height: 300px;
-    float: left ;
+    float: left;
     padding: 15px;
 }
 
 .grid .col-content {
-    
+
     width: 100%;
     height: 100%;
     background-color: red;
-   
+    border-radius: 10%;
+    box-shadow: 10px 10px 15px 5px blue;
 }
+
+.menu {
+    width: 100%;
+    position: fixed;
+    background-color: black;
+}
+
+.menu ul {
+    list-style: none;
+    display: block;
+    max-width: 1200px;
+    padding: 0 30px;
+    margin: 0 auto;
+  
+}
+
+.menu ul li {
+    float: left;
+}
+
+.menu ul li a {
+    display: block;
+    color: white;
+    padding: 20px;
+    text-decoration: none;
+    transition: all 300ms ease-in-out;
+}
+
+.menu ul li a:hover {
+    background-color: #333;
+
+}
+
+.full-page {
+    max-width: 100%;
+    padding: 0 30px;
+    padding-top: 73px;
+    height: 100vh;
+    background-color: turquoise;
+}
+
+.full-page-content {
+    max-width: 1200px;
+    padding: 0 30px;
+    margin: 0 auto;
+
+}
+
+@media all and (max-width: 568px) {
+    .grid .col {
+        width: 100%;
+    }
+}
+
+@media all and (min-width: 569px) and (max-width:768px) {
+    .grid .col {
+        width: 50%;
+    }
+}
+
+@media all and (min-width: 769px) and (max-width:1200px) {
+    .grid .col {
+        width: 33.33%;
+    }
+}
+
+@media all and (min-width: 1200px) {
+    .grid .col {
+        width: 25%;
+    }
+}
+
+
+/* Usando Media Queries */
+
+/* https://developer.mozilla.org/pt-BR/docs/Web/CSS/CSS_media_queries/Using_media_queries
+
+
+https://www.w3schools.com/cssref/css3_pr_mediaquery.php */
