--- a/EXTRA_Landing Page/assets/css/elements.css
+++ b/EXTRA_Landing Page/assets/css/elements.css
@@ -1,6 +1,12 @@
 /* font-family: 'Montserrat', sans-serif;
 font-family: 'Open Sans', sans-serif; */
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
